tests/agl/rejections/match/non_exhaustive_open_domains.agl
case 1 of
  | 1 => ()

case "known" of
  | "known" => ()

let data: json = null
case data of
  | null => ()
